Fix array and collection initialization for improved clarity and maintenance
Refactor collection and array initialization to enhance readability and remove unnecessary parameters. Updated collection instantiation with diamond operator 'ArrayList<>()' and adjusted array access and random number generation to use simpler forms.

I think an issue with older java versions made this not work. This used to work, but I have not been able to get it to compile recently. This should fix that.